# tersmu

./: .cursorindexingignore  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.wasm  JboParse.hs  JboProp.hs  JboShow.hs  JboTree.hs  Lojban.hs  Lojban.pappy  Lojban.pappy.rhs  Lojban.pest  Main.hs  MainWasm.hs  Makefile  Morphology.hs  Morphology.pappy  Morphology.pappy.rhs  Morphology.pest  ParseM.hs  ParseText.hs  README  README.md  Server.hs  build_wasm.sh  default.nix  docker-compose.dev.yml  flake.nix  index.html  nlp-tree.js  pappy.context  pappy.nix  release.nix  src-gen.nix  tersmu.cabal  tersmuBot.hs  test_all_examples.sh  test_api_examples.sh  (+1 more)
.github/workflows/: build-wasm.yml
Pappy/: Basic.hs  Parse.hs
docs/: BUGS.md  CHANGELOG.md  README.old.md  THANKS.md  TODO.md  design-notes.md  overview.md
docs/notes/: bridi-operators.md  drt.md  free.md  goha.md  illocution.md  joi.md  options.md  output.md  questions.md  reductions.md  resources.md  sides.md  tags.md  tense-connections.md  tricky.md  voha.md
examples/: 10.api.diff  11.api.diff  12.api.diff  13.api.diff  14.api.diff  15.api.diff  16.api.diff  17.api.diff  18.api.diff  19.api.diff  3.api.diff  4.api.diff  5.api.diff  6.api.diff  7.api.diff  8.api.diff  9.api.diff  README  sei.jbo
nix/: maintainers.nix  pappy.nix  release.nix  src-gen.nix
pappy/pappy/: LICENSE  Main.hs  Makefile  MemoAnalysis.hs  Options.hs  Pappy.hs  PappyBasic.hs  PappyParse.hs  PappyPos.hs  RawFiles.hs  ReadGrammar.hs  ReduceGrammar.hs  SimplifyGrammar.hs  WriteParser.hs  pappy-hacked.cabal
pappy/pappy/examples/: Arith.pappy  Java.pappy
scripts/: gen_pappy.py  pappy_to_pest.py
wasm-web-app/: README.md  index.html  tersmu.js  tree-viz.js
