name:                tersmu
version:             0.2.3
synopsis:            A semantic parser for lojban
homepage:            https://mbays.sdf.org/tersmu
license:             GPL-3
license-file:        COPYING
author:              Martin Bays
maintainer:          mbays@sdf.org
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.18
data-files:          Lojban.pappy Morphology.pappy
extra-doc-files:     README.md Makefile

description:
    A semantic parser for the engineered human language Lojban
    (www.lojban.org). It translates lojban text to a predicate logic.

flag server
      description: Build the tersmu-server executable
      default: True
      manual: True

source-repository head
   type:     git
   location: http://gitlab.com/lojban/tersmu/

library
      exposed-modules: Bindful JboParse JboProp JboShow JboSyntax Logic Morph ParseM ParseText
      other-modules: Lojban Morphology Pappy.Basic Pappy.Parse Pappy.Pos Util
      build-depends: base >=4.3, base < 5
        , process >= 1.1, containers >= 0.5
        , mtl >=2.0, transformers >=0.2, syb >= 0.4
      ghc-options: -fno-warn-tabs
      default-language:    Haskell2010

executable tersmu
      build-depends: base >=4.3, base < 5
        , process >= 1.1, containers >= 0.5
        , mtl >=2.0, transformers >=0.2, syb >= 0.4
      main-is: Main.hs
      ghc-options: -fno-warn-tabs
      default-language:    Haskell2010

  other-modules: Bindful JboParse JboProp JboShow JboSyntax Logic Lojban Morph
      Morphology Pappy.Basic Pappy.Parse Pappy.Pos ParseM ParseText Util

executable tersmu-server
      if flag(server)
        buildable: True
      else
        buildable: False
      build-depends: base >=4.3, base < 5
        , aeson >= 1.0
        , bytestring >= 0.10
        , http-types >= 0.12
        , process >= 1.1
        , temporary >= 1.2
        , text >= 1.2
        , wai >= 3.2
        , warp >= 3.2
      main-is: Server.hs
      ghc-options: -fno-warn-tabs -threaded
      default-language:    Haskell2010

executable tersmu-wasm
      build-depends: base >=4.3, base < 5
        , process >= 1.1, containers >= 0.5
        , mtl >=2.0, transformers >=0.2, syb >= 0.4
      main-is: MainWasm.hs
      ghc-options: -fno-warn-tabs -optl-Wl,--export=parseLojban -optl-Wl,--export=hs_init -optl-Wl,--export=malloc -optl-Wl,--export=free -optl-Wl,--no-entry
      default-language:    Haskell2010
      other-modules: Bindful JboParse JboProp JboShow JboSyntax Logic Lojban Morph
          Morphology Pappy.Basic Pappy.Parse Pappy.Pos ParseM ParseText Util
